﻿1.1.0
=====

New Features:

Bugfixes:

Translation Updates:


1.0.0
=====

New Features:

  * Add an option to specify a "shared file repository" from the Special:Admin
    page. If set, then any virtual wiki will be able to access images from the
    "shared" virtual wiki as if they were on the same virtual wiki.
  * Use a new algorithm for image resizing to greatly improve image quality.
  * Update the Special:Diff UI to display additional information, including
    revision dates, edit comments, and links to previous/next diff.
  * Display author, revision information, and links to previous/next revision
    when viewing an old version of a topic.
  * Virtual wiki enhancements including the ability to configure a different
    site name, meta description and logo for each virtual wiki.
  * Support the #switch parser functions. Usage:
    "{{#switch: value | case1 = result | case2 = result | default}}".
  * Support the #ifexist parser function. Usage:
    "{{#ifexist: topic | exists | does not exist}}".
  * Support the Mediawiki <onlyinclude> tag for template content.
  * Allow use of HTML heading tags (<h1>, <h2>, etc).
  * Use SLF4J for logging instead of java.util.logging to allow consolidated
    logging from core code and dependencies such as Spring and ehcache. Site
    admins will need to configure the /WEB-INF/classes/logback.xml file.
  * Update the admin page UI to improve usability - content is now organized
    using tabs, and some options have been re-worked.
  * Store interwiki patterns in the database and add a management interface for
    interwiki links to the Special:VirtualWiki page. Not all of the patterns
    from the old interwiki.properties file have been migrated, so sites using
    patterns that were not migrated will need to manually add them.
  * Display interwiki and virtual wiki links in boxes in the left nav by
    default. Sites needing the old behavior (inline links) can re-enable it